Home update, and styling fixes

--- a/index.html
+++ b/index.html
@@ -58,10 +58,36 @@
 
       <div class="elos-template">
         <h1>Globalbility keyboard layouts</h1>
-        <p class="lead">Test keyboard layouts for Elfdalian and the Togolese languages.</p>
-        <p>For KeymanWeb version of the layout, exteded Latin characters are accessed via <kbd>Ctrl</kbd>+<kbd>Alt</kbd> key sequences. Windows and OSX versions will use <kbd>AltGr</kbd> and <kbd>Option</kbd> respectively.</p>
-        <p>The Elfdalian keyboard layout is based on the Swedish layout.</p>
-        <p>The Togolese layout is based on Microsoft's French (France) keyboard layout. The keyboard layout supports Adangbe, Ajagbe, Akaselem, Anii, Anufo, Bago/Kusuntu, Biali, Bisa, Delo, Ditammari, Evegbe, Fongbe, Fulfulde, Gengbe, Gidere, Ginyanga, Gulmancema, Ife, Igo, Ikposo, Kabiye, Kambole, Kebu, Konkomba, Kusaal, Lama, Lukpa, Mampruli, Mbelme, Migangam, Miyobe, Moba, Moore, Nawdm, Ncam, Pla-Peda and Tem.</p>
+        <p class="lead">Keyman keyboard layouts for Elfdalian and the Togolese languages.</p>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="elos">
+                    <img alt="Enabling Languages" src="images/ELOS - Full Logo Reversed White - Medium.png">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-primary">
+                  <div class="panel-heading">
+                    <h3 class="panel-title"><a href="elfdalian.html">Elfdalian</a></h3>
+                  </div>
+                  <div class="panel-body">
+                    <p>The Elfdalian Keyman layout was developed to support Elfdalian, a North Germanic minority language spoken in Sweden.</p>
+                    <p class="readmore"><a href="elfdalian.html">Layout &#x2192;</a></p>
+                  </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-primary">
+                  <div class="panel-heading">
+                    <h3 class="panel-title"><a href="togolese.html">Togolese</a></h3>
+                  </div>
+                  <div class="panel-body">
+                    <p>The Togolese Keyman layout was developed to support the native langauges of Togo. Togo is a multilingual West African country.</p>
+                    <p class="readmore"><a href="togolese.html">Layout &#x2192;</a></p>
+                  </div>
+                </div>
+            </div>
+        </div>
       </div>
 
     </div><!-- /.container -->
