Updated help files to reflect swedish and french physical keyboards

--- a/elfdalian-help-us-qwerty.html
+++ b/elfdalian-help-us-qwerty.html
@@ -72,7 +72,7 @@
 
             <div class="alert alert-dismissible alert-warning">
               <button type="button" class="close" data-dismiss="alert">&times;</button>
-              <p>The Elfdalian layout is based on the Swedish keyboard layout. All key sequence descriptions are based on the printed keys on a Swedish physical keyboard.</p>
+              <p>The Elfdalian layout is based on the Swedish keyboard layout. All key sequence descriptions on this page are based on the printed keys on a US English physical keyboard.</p>
               <p>For KeymanWeb version of the layout, extended Latin characters are accessed via <kbd>Ctrl</kbd>+<kbd>Alt</kbd> key sequences. Keyman Desktop (Windows) and Keyman for Mac OSX use the <kbd>AltGr</kbd> and <kbd>Option</kbd> keys.</p>
             </div>
 
@@ -91,16 +91,16 @@
             </ul>
             <div id="myTabContent" class="tab-content">
               <div class="tab-pane fade active in" id="normal-state">
-                <p class="kbdimage"><img alt="Elfdalian keyboard layout &ndash; normal state" src="images/el_elfdalianU_.png"></p>
+                <p class="kbdimage"><img alt="Elfdalian keyboard layout &ndash; normal state" src="images/el_elfdalian_us_U_.png"></p>
               </div>
               <div class="tab-pane fade" id="shift-state">
-                <p class="kbdimage"><img alt="Elfdalian keyboard layout &ndash; shift state" src="images/el_elfdalianU_S.png"></p>
+                <p class="kbdimage"><img alt="Elfdalian keyboard layout &ndash; shift state" src="images/el_elfdalian_us_U_S.png"></p>
               </div>
               <div class="tab-pane fade" id="altgr-state">
-                <p class="kbdimage"><img alt="Elfdalian keyboard layout &ndash; AltGr state" src="images/el_elfdalianU_RA.png"></p>
+                <p class="kbdimage"><img alt="Elfdalian keyboard layout &ndash; AltGr state" src="images/el_elfdalian_us_U_RA.png"></p>
               </div>
               <div class="tab-pane fade" id="altgr-shift-state">
-                <p class="kbdimage"><img alt="Elfdalian keyboard layout &ndash; Shift AltGr state" src="images/el_elfdalianU_SRA.png"></p>
+                <p class="kbdimage"><img alt="Elfdalian keyboard layout &ndash; Shift AltGr state" src="images/el_elfdalian_us_U_SRA.png"></p>
               </div>
             </div>
 
@@ -177,15 +177,15 @@
                 </tr>
                 <tr>
                   <td class="glyph">ą̊</td>
-                  <td><kbd>AltGR</kbd>+<kbd>Å</kbd></td>
-                  <td><kbd>Option</kbd>+<kbd>Å</kbd></td>
-                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Å</kbd></td>
+                  <td><kbd>AltGR</kbd>+<kbd>[</kbd></td>
+                  <td><kbd>Option</kbd>+<kbd>[</kbd></td>
+                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>[</kbd></td>
                 </tr>
                 <tr>
                  <td class="glyph">Ą̊</td>
-                 <td><kbd>AltGR</kbd>+<kbd>Shift</kbd>+<kbd>Å</kbd></td>
-                 <td><kbd>Option</kbd>+<kbd>Shift</kbd>+<kbd>Å</kbd></td>
-                 <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Shift</kbd>+<kbd>Å</kbd></td>
+                 <td><kbd>AltGR</kbd>+<kbd>Shift</kbd>+<kbd>[</kbd></td>
+                 <td><kbd>Option</kbd>+<kbd>Shift</kbd>+<kbd>[</kbd></td>
+                 <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Shift</kbd>+<kbd>[</kbd></td>
                 </tr>
               </tbody>
             </table>
