--- a/togolese-help-us-qwerty.html
+++ b/togolese-help-us-qwerty.html
@@ -72,7 +72,7 @@
 
             <div class="alert alert-dismissible alert-warning">
               <button type="button" class="close" data-dismiss="alert">&times;</button>
-              <p>The Togolese layout is based on the Microsoft French (France) keyboard layout. All key sequence descriptions in this file are based on the printed keys on the French physical keyboard.</p>
+              <p>The Togolese layout is based on the Microsoft French (France) keyboard layout. All key sequence descriptions in this file are based on the printed keys on the US physical keyboard.</p>
               <p>The keyboard layout supports Adangbe, Ajagbe, Akaselem, Anii, Anufo, Bago/Kusuntu, Biali, Bisa, Delo, Ditammari, Evegbe, Fongbe, Fulfulde, Gengbe, Gidere, Ginyanga, Gulmancema, Ife, Igo, Ikposo, Kabiye, Kambole, Kebu, Konkomba, Kusaal, Lama, Lukpa, Mampruli, Mbelme, Migangam, Miyobe, Moba, Moore, Nawdm, Ncam, Pla-Peda and Tem.</p>
               <p>For KeymanWeb version of the layout, extended Latin characters are accessed via <kbd>Ctrl</kbd>+<kbd>Alt</kbd> key sequences. Keyman Desktop (Windows) and Keyman for Mac OSX use the <kbd>AltGr</kbd> and <kbd>Option</kbd> keys.</p>
             </div>
@@ -92,16 +92,16 @@
             </ul>
             <div id="myTabContent" class="tab-content">
               <div class="tab-pane fade active in" id="normal-state">
-                <p class="kbdimage"><img alt="Togolese keyboard layout &ndash; normal state" src="images/el_togoU_.png"></p>
+                <p class="kbdimage"><img alt="Togolese keyboard layout &ndash; normal state" src="images/el_togo_us_U_.png"></p>
               </div>
               <div class="tab-pane fade" id="shift-state">
-                <p class="kbdimage"><img alt="Togolese keyboard layout &ndash; shift state" src="images/el_togoU_S.png"></p>
+                <p class="kbdimage"><img alt="Togolese keyboard layout &ndash; shift state" src="images/el_togo_us_U_S.png"></p>
               </div>
               <div class="tab-pane fade" id="altgr-state">
-                <p class="kbdimage"><img alt="Togolese keyboard layout &ndash; AltGr state" src="images/el_togoU_RA.png"></p>
+                <p class="kbdimage"><img alt="Togolese keyboard layout &ndash; AltGr state" src="images/el_togo_us_U_RA.png"></p>
               </div>
               <div class="tab-pane fade" id="altgr-shift-state">
-                <p class="kbdimage"><img alt="Togolese keyboard layout &ndash; Shift AltGr state" src="images/el_togoU_SRA.png"></p>
+                <p class="kbdimage"><img alt="Togolese keyboard layout &ndash; Shift AltGr state" src="images/el_togo_us_U_SRA.png"></p>
               </div>
             </div>
 
@@ -130,15 +130,15 @@
                 </tr>
                 <tr>
                   <td class="glyph">ǝ</td>
-                  <td><kbd>AltGR</kbd>+<kbd>Q</kbd></td>
-                  <td><kbd>Option</kbd>+<kbd>Q</kbd></td>
-                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Q</kbd></td>
+                  <td><kbd>AltGR</kbd>+<kbd>A</kbd></td>
+                  <td><kbd>Option</kbd>+<kbd>A</kbd></td>
+                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>A</kbd></td>
                 </tr>
                 <tr>
                  <td class="glyph">Ǝ</td>
-                 <td><kbd>AltGR</kbd>+<kbd>Shift</kbd>+<kbd>Q</kbd></td>
-                 <td><kbd>Option</kbd>+<kbd>Shift</kbd>+<kbd>Q</kbd></td>
-                 <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Shift</kbd>+<kbd>Q</kbd></td>
+                 <td><kbd>AltGR</kbd>+<kbd>Shift</kbd>+<kbd>A</kbd></td>
+                 <td><kbd>Option</kbd>+<kbd>Shift</kbd>+<kbd>A</kbd></td>
+                 <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Shift</kbd>+<kbd>A</kbd></td>
                 </tr>
                 <tr>
                   <td class="glyph">ɩ</td>
@@ -204,45 +204,45 @@
               <tbody>
                 <tr>
                   <td class="glyph">◌̂</td>
-                  <td><kbd>LBRCKT</kbd></td>
-                  <td><kbd>LBRCKT</kbd></td>
-                  <td><kbd>LBRCKT</kbd></td>
+                  <td><kbd>[</kbd></td>
+                  <td><kbd>[</kbd></td>
+                  <td><kbd>[</kbd></td>
                 </tr>
                 <tr>
                   <td class="glyph">◌̈</td>
-                  <td><kbd>Shift</kbd>+<kbd>^</kbd></td>
-                  <td><kbd>Shift</kbd>+<kbd>^</kbd></td>
-                  <td><kbd>Shift</kbd>+<kbd>^</kbd></td>
+                  <td><kbd>Shift</kbd>+<kbd>[</kbd></td>
+                  <td><kbd>Shift</kbd>+<kbd>[</kbd></td>
+                  <td><kbd>Shift</kbd>+<kbd>[</kbd></td>
                 </tr>
                 <tr>
                   <td class="glyph">◌̌</td>
-                  <td><kbd>AltGR</kbd>+<kbd>^</kbd></td>
-                  <td><kbd>Option</kbd>+<kbd>^</kbd></td>
-                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>^</kbd></td>
+                  <td><kbd>AltGR</kbd>+<kbd>[</kbd></td>
+                  <td><kbd>Option</kbd>+<kbd>[</kbd></td>
+                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>[</kbd></td>
                 </tr>
                 <tr>
                   <td class="glyph">◌́</td>
-                  <td><kbd>AltGR</kbd>+<kbd>*</kbd></td>
-                  <td><kbd>Option</kbd>+<kbd>*</kbd></td>
-                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>*</kbd></td>
+                  <td><kbd>AltGR</kbd>+<kbd>\</kbd></td>
+                  <td><kbd>Option</kbd>+<kbd>\</kbd></td>
+                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>\</kbd></td>
                 </tr>
                 <tr>
                   <td class="glyph">◌̀</td>
-                  <td><kbd>AltGR</kbd>+<kbd>Ù</kbd></td>
-                  <td><kbd>Option</kbd>+<kbd>Ù</kbd></td>
-                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Ù</kbd></td>
+                  <td><kbd>AltGR</kbd>+<kbd>'</kbd></td>
+                  <td><kbd>Option</kbd>+<kbd>'</kbd></td>
+                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>'</kbd></td>
                 </tr>
                 <tr>
                   <td class="glyph">◌̄</td>
-                  <td><kbd>AltGR</kbd>+<kbd>:</kbd></td>
-                  <td><kbd>Option</kbd>+<kbd>:</kbd></td>
-                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>:</kbd></td>
+                  <td><kbd>AltGR</kbd>+<kbd>.</kbd></td>
+                  <td><kbd>Option</kbd>+<kbd>.</kbd></td>
+                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>.</kbd></td>
                 </tr>
                 <tr>
                   <td class="glyph">◌̃</td>
-                  <td><kbd>AltGR</kbd>+<kbd>!</kbd></td>
-                  <td><kbd>Option</kbd>+<kbd>!</kbd></td>
-                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>!</kbd></td>
+                  <td><kbd>AltGR</kbd>+<kbd>/</kbd></td>
+                  <td><kbd>Option</kbd>+<kbd>/</kbd></td>
+                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>/</kbd></td>
               </tr>
               </tbody>
             </table>
@@ -345,15 +345,15 @@
                 </tr>
                 <tr>
                   <td class="glyph">ɲ</td>
-                  <td><kbd>AltGR</kbd>+<kbd>Colon</kbd></td>
-                  <td><kbd>Option</kbd>+<kbd>Colon</kbd></td>
-                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Colon</kbd></td>
+                  <td><kbd>AltGR</kbd>+<kbd>;</kbd></td>
+                  <td><kbd>Option</kbd>+<kbd>;</kbd></td>
+                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>;</kbd></td>
                 </tr>
                 <tr>
                  <td class="glyph">Ɲ</td>
-                 <td><kbd>AltGR</kbd>+<kbd>Shift</kbd>+<kbd>M</kbd></td>
-                 <td><kbd>Option</kbd>+<kbd>Shift</kbd>+<kbd>M</kbd></td>
-                 <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Shift</kbd>+<kbd>M</kbd></td>
+                 <td><kbd>AltGR</kbd>+<kbd>Shift</kbd>+<kbd>;</kbd></td>
+                 <td><kbd>Option</kbd>+<kbd>Shift</kbd>+<kbd>;</kbd></td>
+                 <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Shift</kbd>+<kbd>;</kbd></td>
                 </tr>
                 <tr>
                   <td class="glyph">ƴ</td>
@@ -375,9 +375,9 @@
                 </tr>
                 <tr>
                   <td class="glyph">Ʒ</td>
-                  <td><kbd>AltGR</kbd>+<kbd>Shift</kbd>+<kbd>Z</kbd></td>
-                  <td><kbd>Option</kbd>+<kbd>Shift</kbd>+<kbd>Z</kbd></td>
-                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Shift</kbd>+<kbd>Z</kbd></td>
+                  <td><kbd>AltGR</kbd>+<kbd>Shift</kbd>+<kbd>W</kbd></td>
+                  <td><kbd>Option</kbd>+<kbd>Shift</kbd>+<kbd>W</kbd></td>
+                  <td><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Shift</kbd>+<kbd>W</kbd></td>
                 </tr>
               </tbody>
             </table>
