minor fix to Elfdalian test page

--- a/elfdalian-test.html
+++ b/elfdalian-test.html
@@ -148,7 +148,7 @@
             <p class="lead">Keyman keyboard layouts for Elfdalian.</p>
 
             <div id="kbdhelp">
-                <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="top" data-content="<kbd>ctrl</kbd>+<kbd>alt</kbd>+<kbd>A</kbd> = ą <br> <kbd>ctrl</kbd>+<kbd>alt</kbd>+<kbd>E</kbd> = ę<br><kbd>ctrl</kbd>+<kbd>alt</kbd>+<kbd>I</kbd> = į<br><kbd>ctrl</kbd>+<kbd>alt</kbd>+<kbd>U</kbd> = ų<br><kbd>ctrl</kbd>+<kbd>alt</kbd>+<kbd>Y</kbd> = y̨<br><kbd>ctrl</kbd>+<kbd>alt</kbd>+<kbd>Å</kbd> = ą̊" data-original-title="help" title="Keyboard help" aria-describedby="popover685826" data-html="true">?</button>
+                <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="top" data-content="<kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>A</kbd> = ą <br> <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>E</kbd> = ę<br><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>I</kbd> = į<br><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>U</kbd> = ų<br><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Y</kbd> = y̨<br><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Å</kbd> = ą̊" data-original-title="help" title="Keyboard help" aria-describedby="popover685826" data-html="true">?</button>
             </div>
             <textarea rows="6" cols="60"></textarea>
 
