Fixed bug for keyboard fielname

--- a/elfdalian-test.html
+++ b/elfdalian-test.html
@@ -71,7 +71,7 @@
         tavultesoft.keymanweb.addKeyboards({
           name: 'Elfdalian',       // Display name of the keyboard
           id: 'el_elfdalian',   // ID of the keyboard for reference in code
-          filename: 'js/el_elfdalian-0..52.js',  // source of the keyboard for dynamic load
+          filename: 'js/el_elfdalian-0.5.2.js',  // source of the keyboard for dynamic load
           version: '0.5.2',         // version of the keyboard, optional
           language: [{
             name: 'Elfdalian',        // language name for UI elements
