Issue #5, removed Globalbility from heading and title in Elfdalian pages

--- a/elfdalian-help.html
+++ b/elfdalian-help.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../favicon.ico">
 
-    <title>Globalbility keyboard layouts &ndash; Elfdalian &ndahs; layout documentation</title>
+    <title>Keyboard layouts &ndash; Elfdalian &ndahs; layout documentation</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -67,7 +67,7 @@
         </div>
 
         <div class="elos-template">
-            <h1>Globalbility keyboard layouts &ndash; Elfdalian</h1>
+            <h1>Keyboard layouts &ndash; Elfdalian</h1>
             <p class="lead">Keyman keyboard layouts for Elfdalian.</p>
 
             <div class="alert alert-dismissible alert-warning">
