--- a/elfdalian-test.html
+++ b/elfdalian-test.html
@@ -12,7 +12,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../favicon.ico">
 
-    <title>Globalbility keyboard layouts &ndash; Togoloese</title>
+    <title>Keyboard layouts &ndash; Togoloese</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -144,7 +144,7 @@
         </div>
 
         <div class="elos-template">
-            <h1>Globalbility keyboard layouts &ndash; Elfdalian</h1>
+            <h1>Keyboard layouts &ndash; Elfdalian</h1>
             <p class="lead">Keyman keyboard layouts for Elfdalian.</p>
 
             <div id="kbdhelp">
