--- a/elfdalian-char.html
+++ b/elfdalian-char.html
@@ -4,7 +4,43 @@
     <meta charset="utf-8">
     <title>Elfdalian &ndash; font test</title>
     <style>
-        .glyph {font-size: 2.5em;}
+
+.glyph {font-size: 2.5em;}
+
+table.blueTable {
+  border: 1px solid #1C6EA4;
+  background-color: #EEEEEE;
+  width: 400px;
+  text-align: left;
+  border-collapse: collapse;
+}
+table.blueTable td, table.blueTable th {
+  border: 1px solid #AAAAAA;
+  padding: 15px 8px;
+}
+table.blueTable tr:nth-child(even) {
+  background: #D0E4F5;
+}
+table.blueTable thead {
+  background: #1C6EA4;
+  background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
+  background: -webkit-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
+  background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
+  border-bottom: 2px solid #444444;
+}
+table.blueTable thead th {
+  font-weight: bold;
+  color: #FFFFFF;
+  text-align: left;
+  border-left: 2px solid #D0E4F5;
+}
+table.blueTable thead th:first-child {
+  border-left: none;
+}
+
+table.blueTable tbody td:first-child {
+  text-align: center;
+}
     </style>
   </head>
 
@@ -13,7 +49,7 @@
 
 
 
-            <table class="table table-striped table-bordered table-hover">
+            <table class="blueTable">
             	<thead>
             		<tr>
             			<th>Glyph</th>
