--- a/elfdalian-char.html
+++ b/elfdalian-char.html
@@ -10,7 +10,8 @@
 table.blueTable {
   border: 1px solid #1C6EA4;
   background-color: #EEEEEE;
-  width: 400px;
+  width:100%;
+  max-width: 400px;
   text-align: left;
   border-collapse: collapse;
 }
@@ -59,42 +60,42 @@ table.blueTable tbody td:first-child {
             	</thead>
             	<tbody>
             		<tr>
-            			<td class="glyph">ą̊</td>
+            			<td class="glyph">&#x0061;&#x0328;&#x030A;</td>
             			<td>U+0061 U+0328 U+‎030A</td>
             			<td>NFD</td>
             		</tr>
             		<tr>
-            			<td class="glyph">Ą̊</td>
+            			<td class="glyph">&#x0041;&#x0328;&#x030A;</td>
             			<td>U+0041 U+0328 U+‎030A</td>
             			<td>NFD</td>
             		</tr>
             		<tr>
-            			<td class="glyph">ą̊</td>
+            			<td class="glyph">&#x0061;&#x030A;&#x0328;</td>
             			<td>U+0061 U+‎030A U+0328</td>
             			<td></td>
             		</tr>
             		<tr>
-            			<td class="glyph">Ą̊</td>
+            			<td class="glyph">&#x0041;&#x030A;&#x0328;</td>
             			<td>U+0041 U+‎030A U+0328</td>
             			<td></td>
             		</tr>
             		<tr>
-            			<td class="glyph">ą̊</td>
+            			<td class="glyph">‎&#x0105;&#x030A;</td>
             			<td>‎U+0105 U+030A</td>
             			<td>NFC</td>
             		</tr>
             		<tr>
-            			<td class="glyph">Ą̊</td>
+            			<td class="glyph">&#x0104;&#x030A;</td>
             			<td>U+0104 U+030A</td>
             			<td>NFC</td>
             		</tr>
             		<tr>
-            			<td class="glyph">ą̊</td>
+            			<td class="glyph">&#x00E5;&#x0328;</td>
             			<td>U+‎00E5 U+0328</td>
             			<td></td>
             		</tr>
             		<tr>
-            			<td class="glyph">Ą̊</td>
+            			<td class="glyph">&#x00C5;&#x0328;</td>
             			<td>U+00C5 U+0328</td>
             			<td></td>
             		</tr>
