Updated test pages with Swedish rather than Eglish text

--- a/elfdalian-test.html
+++ b/elfdalian-test.html
@@ -12,7 +12,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../favicon.ico">
 
-    <title>Keyboard layouts &ndash; Togoloese</title>
+    <title lang="sv">Mobil tangentbordslayout &ndash; Älvdalsk</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -143,18 +143,25 @@
             </ul>
         </div>
 
-        <div class="elos-template">
-            <h1>Keyboard layouts &ndash; Elfdalian</h1>
-            <p class="lead">Keyman keyboard layouts for Elfdalian.</p>
-
-            <div id="kbdhelp">
-                <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="top" data-content="<kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>A</kbd> = ą <br> <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>E</kbd> = ę<br><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>I</kbd> = į<br><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>U</kbd> = ų<br><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Y</kbd> = y̨<br><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Å</kbd> = ą̊" data-original-title="help" title="Keyboard help" aria-describedby="popover685826" data-html="true">?</button>
+        <div class="elos-template" lang="sv">
+            <div class="col-sm-12">
+                <h1>Mobil tangentbordslayout &ndash; Älvdalsk</h1>
             </div>
-            <textarea rows="6" cols="60"></textarea>
+            <div class="col-sm-12">
+              <div class="alert alert-dismissible alert-warning">
+                <button type="button" class="close" data-dismiss="alert">×</button>
+                <h4 class="centre">Prototyp 1</h4>
+                <p class="centre"><strong>Du måste använda din mobila enhet för att testa detta.</strong></p>
+                <p class="centre">Klicka i textfältet för att se tangentbordet.</p>
+              </div>
+            </div>
 
-
-
-
+            <!-- <div id="kbdhelp">
+                <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="top" data-content="<kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>A</kbd> = ą <br> <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>E</kbd> = ę<br><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>I</kbd> = į<br><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>U</kbd> = ų<br><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Y</kbd> = y̨<br><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Å</kbd> = ą̊" data-original-title="help" title="Keyboard help" data-html="true">?</button>
+            </div> -->
+            <div class="col-sm-12">
+                <textarea rows="6"></textarea>
+            </div>
 
         </div>
 
