elfalain, latest js and kmp files v0.8.1

--- a/elfdalian.html
+++ b/elfdalian.html
@@ -71,13 +71,16 @@
             <h1>Globalbility keyboard layouts &ndash; Elfdalian</h1>
             <p class="lead">Keyman keyboard layouts for Elfdalian.</p>
 
-            <p>An Elfdalian keyboard layout is under development.</p>
+            <p>An Elfdalian keyboard layout is under development, for Keyman 9.</p>
+            <h2>Mobile layouts (Web, iOS and Android)
             <ul>
-                <li><a href="elfdalian-test.html">KeymanWeb layout</a> for testing</li>
-                <li><a href="elfdalian-help.html">Help files for Elfdalian layout</a></li>
+                <li><a href="elfdalian-test-3.html">KeymanWeb layout</a> for testing</li>
+                <li>Keyman keyboard<a href="elfdalian/el_elfdalian-0.8.1.json">install file</a>.</li>
             </ul>
-
-
+            <h2>Desktop layouts (Windows, OSX)</h2>
+            <ul>
+                <li>Windows and OSX <a href="elfdalian/el_elfdalian-0.8.1.kmp">kmp (Keyman Keyboard package)</a></li>
+                <li><a href="elfdalian-help.html">Help files for Elfdalian layout</a></li>
         </div>
 
     </div><!-- /.container -->
