Fix to markup error in elfdalain.html

--- a/elfdalian.html
+++ b/elfdalian.html
@@ -72,7 +72,7 @@
             <p class="lead">Keyman keyboard layouts for Elfdalian.</p>
 
             <p>An Elfdalian keyboard layout is under development, for Keyman 9.</p>
-            <h2>Mobile layouts (Web, iOS and Android)
+            <h2>Mobile layouts (Web, iOS and Android)</h2>
             <ul>
                 <li><a href="elfdalian-test-3.html">KeymanWeb layout</a> for testing</li>
                 <li>Keyman keyboard<a href="elfdalian/el_elfdalian-0.8.1.json">install file</a>.</li>
