updated elfdalian keyboard files

--- a/elfdalian.html
+++ b/elfdalian.html
@@ -75,11 +75,11 @@
             <h2>Mobile layouts (Web, iOS and Android)</h2>
             <ul>
                 <li><a href="elfdalian-test-3.html">KeymanWeb layout</a> for testing</li>
-                <li>Keyman keyboard<a href="elfdalian/el_elfdalian-0.8.1.json">install file</a>.</li>
+                <li>Keyman keyboard<a href="keyman://localhost/open?direct=true&url=https://enabling-languages.github.io/globalbility/elfdalian/el_elfdalian-0.8.4.json">install file</a>.</li>
             </ul>
             <h2>Desktop layouts (Windows, OSX)</h2>
             <ul>
-                <li>Windows and OSX <a href="elfdalian/el_elfdalian-0.8.1.kmp">kmp (Keyman Keyboard package)</a></li>
+                <li>Windows and OSX <a href="elfdalian/el_elfdalian.kmp">kmp (Keyman Keyboard package)</a></li>
                 <li><a href="elfdalian-help.html">Help files for Elfdalian layout</a></li>
         </div>
 
