--- a/elfdalian-test.html
+++ b/elfdalian-test.html
@@ -12,7 +12,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../favicon.ico">
 
-    <title lang="sv">Mobil tangentbordslayout &ndash; Älvdalsk</title>
+    <title lang="sv">Mobil tangentbordslayout &ndash; Älvdalsk (KMW 2.x)</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -70,9 +70,9 @@
 
         tavultesoft.keymanweb.addKeyboards({
           name: 'Elfdalian',       // Display name of the keyboard
-          id: 'el_elfdalian',   // ID of the keyboard for reference in code
-          filename: '/globalbility/js/el_elfdalian-0.6.1.js',  // source of the keyboard for dynamic load
-          version: '0.6.1',         // version of the keyboard, optional
+          id: 'gl_elfdalian',   // ID of the keyboard for reference in code
+          filename: '/globalbility/js/km9/gl_elfdalian-1.0.js',  // source of the keyboard for dynamic load
+          version: '1.0',         // version of the keyboard, optional
           language: [{
             name: 'Elfdalian',        // language name for UI elements
             id: 'ovd',            // language ID for tagging text
@@ -87,7 +87,7 @@
 
 
         // Focus text area after everything loads
-        //ta.scrollIntoView();
+
         ta.focus();
       }, false);
     </script>
@@ -128,12 +128,12 @@
 
         <div class="elos-template" lang="sv">
             <div class="col-sm-12">
-                <h1>Mobil tangentbordslayout &ndash; Älvdalsk</h1>
+                <h1>Mobil tangentbordslayout &ndash; Älvdalsk (KMW 2.x)</h1>
             </div>
             <div class="col-sm-12">
               <div class="alert alert-dismissible alert-warning">
                 <button type="button" class="close" data-dismiss="alert">×</button>
-                <h4 class="centre">Prototyp 1</h4>
+                <h4 class="centre">Prototyp 3</h4>
                 <p class="centre"><strong>Du måste använda din mobila enhet för att testa detta.</strong></p>
                 <p class="centre">Klicka i textfältet för att se tangentbordet.</p>
               </div>
