--- a/elfdalian.html
+++ b/elfdalian.html
@@ -71,16 +71,22 @@
             <h1>Globalbility keyboard layouts &ndash; Elfdalian</h1>
             <p class="lead">Keyman keyboard layouts for Elfdalian.</p>
 
-            <p>An Elfdalian keyboard layout is under development, for Keyman 9.</p>
-            <h2>Mobile layouts (Web, iOS and Android)</h2>
+            <h2>Keyman 10</h2>
+
+            <p>Download the <a href="el_elfdalian.kmp">cross platform (Windows, macOS, Android and iOS) file</a> for Keyman 10.</p>
+
+            <h2>Older versions of Keyman</h2>
+
+            <h3>Mobile layouts (Keyman 2.x for Web, iOS and Android)</h3>
             <ul>
-                <li><a href="elfdalian-test-3.html">KeymanWeb layout</a> for testing</li>
-                <li>Keyman keyboard <a href="keyman://localhost/open?direct=true&url=https://enabling-languages.github.io/globalbility/el_elfdalian-0.8.5.json">install file</a>.</li>
+                <li><a href="elfdalian-test.html">KeymanWeb layout</a> for testing</li>
+                <li>Keyman keyboard <a href="keyman://localhost/open?direct=true&url=https://enabling-languages.github.io/globalbility/km9/gl_elfdalian-1.0.json">install file</a>.</li>
             </ul>
-            <h2>Desktop layouts (Windows, OSX)</h2>
+            <h3>keyman 9 Desktop layouts (Windows, OSX)</h3>
             <ul>
-                <li>Windows and OSX <a href="el_elfdalian.kmp">kmp (Keyman Keyboard package)</a></li>
+                <li>Windows and OSX <a href="km9/el_elfdalian.kmp">kmp (Keyman Keyboard package)</a></li>
                 <li><a href="elfdalian-help.html">Help files for Elfdalian layout</a></li>
+            </ul>
         </div>
 
     </div><!-- /.container -->
