Minor edit to kmw 2.x page

--- a/elfdalian-test.html
+++ b/elfdalian-test.html
@@ -133,7 +133,7 @@
             <div class="col-sm-12">
               <div class="alert alert-dismissible alert-warning">
                 <button type="button" class="close" data-dismiss="alert">×</button>
-                <h4 class="centre">Prototyp 3</h4>
+                <h4 class="centre">Prototyp</h4>
                 <p class="centre"><strong>Du måste använda din mobila enhet för att testa detta.</strong></p>
                 <p class="centre">Klicka i textfältet för att se tangentbordet.</p>
               </div>
